--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 <body>
     <form id="form" class="user-form">
-        <input type="text" id="search" placeholder="Search a github User">
+        <input class="text-center" type="text" id="search" placeholder="Find yourself on github">
     </form>
+    <small class="text-center">Press Enter to Search</small>
     <main id="main">
         <!-- <div class="cards">
             <div>
